# Agora-Review

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  test.md  test_6.txt  test_7.txt
.github/workflows/: deploy-cloudflare.yml
.vitepress/: config.mts
.vitepress/helpers/: sidebar.ts
.vitepress/theme/: MyLayout.vue  PreviousDiscussions.vue  custom.css  index.js  posts.data.js
content/: index.md  info.md  previous.md
content/AI Personhood_ Ethical and Judicial Challenges/: summary.md  transcript.md
content/Beyond Good and Evil: Neuroscience, Ethics, and Responsibility/: summary.md  transcript.md
content/Human Rights First_ Rethinking AI Legal Personhood/: summary.md  transcript.md
content/Identity, Privacy, and the Mind-Body Debate/: summary.md  transcript.md
content/Rethinking the Given_ Empiricism and the Philosophy of Mind/: summary.md  transcript.md
content/Retribution, Desert, and the Limits of Punishment/: summary.md  transcript.md
content/Rotten Social Background_ Rethinking Criminal Responsibility/: summary.md  transcript.md
content/The Ethics and Policy of Genetic Enhancement/: summary.md  transcript.md
content/The Hard Problem: Organization, Information, and Consciousness/: summary.md  transcript.md
content/Who Counts_ Personhood in the Age of AI/: summary.md  transcript.md
content/public/: 404.html  site.webmanifest
src/: config.py  logger.py  main.py  telemetry.py
src/agent/: master.py  tools.py
src/ai/: client.py  models.py
src/db/: schema.py  weaviate_client.py
src/embeddings/: base.py  models.py
(+17 files in other folders)
